egressCluster/kubernetes/via-int/envoy-configs.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  labels:
    name: envoy-config
data:
  config: |-
    ---
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 10000 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              stat_prefix: egress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: int
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route: { cluster: int }
              http_filters:
              - name: envoy.router
      ########################
      # SQL Lissners
      #
      ########################
      - name: mysql
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 3401
        filter_chains:
        - filters:
          - name: envoy.tcp_proxy
            config:
              stat_prefix: ingress_tcp
              cluster: mysqlfp
      


      clusters:
      ########################
      ###
      ###  Proxy all connections to INT SERVERS
      ###
      #########################
      - name: int
        connect_timeout: 2.25s
        type: LOGICAL_DNS
        # Comment out the following line to test on v6 networks
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        hosts: [{ socket_address: { address: proxy-int.example.com, port_value: 30002 }}]
        tls_context:
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/ssl/tls.crt"
                private_key:
                  filename: "/etc/ssl/tls.key"
            validation_context:
              trusted_ca:
                filename: "/etc/ssl/ca.pem"

        #####################
        # SQL CONFIG
        #
        ##################
      - name: mysql
        connect_timeout: 3.25s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: proxy-int.example.com
            port_value: 30401
        tls_context:
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "/etc/ssl/tls.crt"
                private_key:
                  filename: "/etc/ssl/tls.key"
            validation_context:
              trusted_ca:
                filename: "/etc/ssl/ca.pem"
